[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
egui_glow = "0.33.2"
glam = "0.30.3"
three-d = { git = "https://github.com/Niki123456123456/three-d", branch = "program_draw_more_than_triangles" }
draco-gltf-rs = { git = "https://github.com/Niki123456123456/draco-gltf-rs.git" }
gltf = "1.4.1"
geoconv = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
ehttp = "0.5.0"
poll-promise = "0.3.0"
futures = "0.3.31"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3.70", features = [
  'Window',
  'HtmlAnchorElement',
] }
js-sys = "0.3"
egui-3d-map-view = {path = "../../"}
egui_ltreeview = "0.6.0"
